# RustBrother

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: analyzer.rs  complexity_analyzer.rs  css_parser.rs  js_parser.rs  lib.rs  main.rs  reporter.rs  tests.rs
templates/: class-item.html  complexity-file-group.html  complexity-warning.html  file-group.html  no-unused.html  report.html
tests/: lib.rs
tests/components/button/: Button.module.scss  Button.test.rs  Button.tsx
tests/components/card/: Card.module.scss  Card.test.rs  Card.tsx
tests/components/panel/: Panel.module.scss  Panel.test.rs  Panel.tsx
tests/integration/: full_analysis.rs
